# RejectionRoulette

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: CI.yaml  release.yaml
assets/icons/: rr.icns
assets/js/: custom-theme.js
assets/styling/: dashboard.scss  form.scss  main.scss  modal.scss  nav.scss  resumes.scss  settings.scss  table.scss  theme.scss
crates/backend/: Cargo.toml
crates/backend/src/: export.rs  filter.rs  lib.rs  plots.rs  settings.rs  utils.rs
crates/backend/src/database/: dao.rs  mod.rs  schema.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cmds.rs  main.rs
src/: main.rs
src/backend/: db.rs  mod.rs
src/components/: add_application.rs  add_entry.rs  add_resume.rs  edit_entry.rs  mod.rs  modal_overlay.rs  tables.rs
src/views/: applications_page.rs  dashboard.rs  home.rs  interviews_page.rs  mod.rs  navbar.rs  offers_page.rs  resumes_page.rs  settings_page.rs
