[package]
name = "RejectionRoulette"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
backend = { path = "./crates/backend" }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
anyhow.workspace = true
backend.workspace = true
chrono.workspace = true
dioxus = { version = "0.7.6", features = ["router", "html"] }
open = "5.3.3"
serde.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
