[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
charming = { version = "0.6.0", features = ["ssr"] }
csv = "1.4.0"
dirs = "6.0.0"
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde.workspace = true
sha2 = "0.11.0"
toml = "1.1.2"
